# Dataflow

./: .clang-format  .hgignore  .travis.yml  CMakeLists.txt  Doxyfile  conanfile.txt  readme.rst  run-clang-format.sh
.github/workflows/: cmake-unix-makefiles.yml  cmake.yml
benchmark/: CMakeLists.txt  check_point.cpp  check_point.h  check_points.cpp  check_points.h  main.cpp
benchmark/benchmark/: CMakeLists.txt  check_point.cpp  check_point.h  main.cpp
benchmark/mbenchmark/: CMakeLists.txt  main.cpp
cmake/: get_boost.cmake  get_dst.cmake  get_google_benchmark.cmake  get_immer.cmake
cmake/get_boost/: CMakeLists.txt.in
cmake/get_dst/: CMakeLists.txt.in
cmake/get_google_benchmark/: CMakeLists.txt.in
cmake/get_immer/: CMakeLists.txt.in
example/: CMakeLists.txt
example/QML/: CMakeLists.txt  Context.h  Input.h  Output.h  main.cpp  main.qml  resources.qrc  view1.qml
example/QML/drag-n-drop/: CMakeLists.txt  main.cpp  resources.qrc  view2.qml
example/QML/snake/: CMakeLists.txt  main.cpp  resources.qrc  view.qml
include/dataflow/: arithmetic.inl  behavior.h  behavior.inl  comparison.h  conditional.h  conditional.inl  core.h  core.inl  geometry.h  geometry.inl  introspect.h  introspect.inl  io.h  io.inl  list.h  list.inl  logical.inl  macro.h  macro.inl  maybe.h  maybe.inl  pair.h  pair.inl  prelude.h  prelude.inl  qt.h  qt.inl  random.h  random.inl  string.h  string.inl  tuple.h  tuple.inl
include/dataflow-qt/: qt.h  qt.inl
include/dataflow-qt/qt/: conversion.h  qhandle.h  qvariant.h
include/dataflow-qt/qt/internal/: qobject_builder.h
include/dataflow/internal/: config.h  node.h  node_activator.h  node_compound.h  node_const.h  node_if.h  node_if_activator.h  node_main.h  node_n_ary.h  node_patcher_n_ary.h  node_previous.h  node_selector.h  node_selector_activator.h  node_signal.h  node_snapshot.h  node_snapshot_activator.h  node_state.h  node_state_prev.h  node_t.h  node_var.h  nodes.h  nodes_factory.h  ref.h  std_future.h  type_traits.h
include/dataflow/list/internal/: list_diff.h
include/dataflow/macro/internal/: cat.h  comma_if.h  expand.h  invoke.h  stringize.h  tuple_elem.h  tuple_for_each_i.h  tuple_size.h
include/dataflow/prelude/: arithmetic.h  arithmetic.inl  comparison.h  comparison.inl  conditional.h  conditional.inl  core.h  core.inl  logical.h  logical.inl  stateful.h  stateful.inl
include/dataflow/prelude/core/: dtime.h  engine_options.h
include/dataflow/prelude/core/internal/: node.h  node_compound.h  node_const.h  node_if.h  node_if_activator.h  node_main.h  node_n_ary.h  (+18 more)
include/dataflow/qt/: conversion.h  qhandle.h  qml_data.h  qvariant.h
include/dataflow/qt/internal/: context_builder.h  conversion.h  qobject_builder.h  qobject_deleter.h
include/dataflow/utility/: std_future.h  utility.h
src/: arithmetic.cpp  behavior.cpp  comparison.cpp  conditional.cpp  core.cpp  geometry.cpp  introspect.cpp  io.cpp  list.cpp  logical.cpp  main.cpp  pair.cpp  prelude.cpp  qt.cpp  random.cpp  string.cpp
src/dataflow-qt/: qt.cpp
src/dataflow-qt/qt/: conversion.cpp  qvariant.cpp
src/dataflow-qt/qt/internal/: dynamic_qobject.cpp  dynamic_qobject.h  qobject_builder.cpp  qobject_deleter.cpp  qobject_deleter.h  qobject_factory.cpp  qobject_factory.h  qobject_tracker.cpp  qobject_tracker.h  qvariant_list_model.cpp  qvariant_list_model.h
src/internal/: config.h  converter.h  engine.cpp  engine.h  engine.inl  graph.h  node.cpp  node_activator.cpp  node_compound.cpp  node_if_activator.cpp  node_main_activator.h  node_selector_activator.cpp  node_signal.cpp  node_snapshot_activator.cpp  node_state.cpp  node_state_prev.cpp  node_time.h  nodes_factory.cpp  pumpa.cpp  pumpa.h  pumpa.inl  ref.cpp  tick_count.h  utility.h  vd_handle.h  vd_handle.inl
src/prelude/: arithmetic.cpp  comparison.cpp  conditional.cpp  core.cpp  logical.cpp
src/prelude/core/: dtime.cpp
src/prelude/core/internal/: config.h  converter.h  discrete_time.h  engine.cpp  engine.h  engine.inl  graph.h  node.cpp  node_compound.cpp  node_if_activator.cpp  node_recursion.cpp  node_recursion_activator.cpp  node_selector_activator.cpp  node_signal.cpp  node_since_activator.cpp  node_snapshot_activator.cpp  node_time.h  nodes_factory.cpp  pumpa.cpp  pumpa.h  ref.cpp  tick_count.h  vd_handle.inl
src/prelude/stateful/internal/: transition.cpp
src/qt/: conversion.cpp  qml_data.cpp  qvariant.cpp
src/qt/internal/: context_builder.cpp  context_builder_impl.cpp  context_builder_impl.h  conversion.cpp  dynamic_qobject.cpp  dynamic_qobject.h  qobject_builder.cpp  qobject_deleter.cpp  qobject_factory.cpp  qobject_factory.h  qobject_tracker.cpp  qobject_tracker.h  qvariant_list_model.cpp  qvariant_list_model.h
test/: CMakeLists.txt  main.cpp  test_arithmetic.cpp  test_behavior.cpp  test_comparison.cpp  test_conditional.cpp  test_core.cpp  test_geometry.cpp  test_integration.cpp  test_introspect.cpp  test_io.cpp  test_list.cpp  test_logical.cpp  test_macro.cpp  test_maybe.cpp  test_pair.cpp  test_prelude.cpp  test_qt.cpp  test_random.cpp  test_regression.cpp  test_string.cpp  test_test_tools.cpp  test_tuple.cpp  test_utility.cpp
test/dataflow-qt/: test_qt.cpp
test/dataflow-qt/qt/internal/: example_qobject.cpp  example_qobject.h  js_engine.cpp  js_engine.h  lambda_connector.cpp  lambda_connector.h  test_internal.cpp  test_qobject_builder.cpp
test/integration/: test_state_machine.cpp
test/integration/conditional/: test_conditional.cpp
test/integration/state_machine/: test_state_machine.cpp
test/list/: test_list_list.cpp  test_list_patch.cpp
test/prelude/: test_arithmetic.cpp  test_comparison.cpp  test_conditional.cpp  test_core.cpp  test_core.naive.cpp  test_core.patcher.cpp  test_core.type_traits.cpp  test_logical.cpp  test_stateful.cpp
test/prelude/core/: test_dtime.cpp
test/qt/internal/: example_qobject.cpp  example_qobject.h  js_engine.cpp  js_engine.h  lambda_connector.cpp  lambda_connector.h  test_internal.cpp  test_qobject_builder.cpp
test/tools/: EngineTest.cpp  EngineTest.h  graph_invariant.cpp  graph_invariant.h  io_fixture.cpp  io_fixture.h  test_tools.h
(+3 files in other folders)
